--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 node_modules
+packages/pressy/dist/**/*
+packages/pressy/dist/*
+packages/@pressy/components/dist/**/*
+packages/@pressy/components/dist/*
+packages/@pressy/typography/dist/**/*
+packages/@pressy/typography/dist/*
+packages/@pressy/shopify/dist/**/*
+packages/@pressy/shopify/dist/*
