--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -2,10 +2,10 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
     types: [opened, synchronize, reopened, closed]
-    branches: [master]
+    branches: [main]
   workflow_dispatch:
 
 permissions:
@@ -24,8 +24,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: pnpm/action-setup@v4
-        with:
-          version: 9
 
       - uses: actions/setup-node@v4
         with:
@@ -36,14 +34,13 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build packages
-        run: pnpm --filter './packages/*' build
+        run: pnpm build
+
+      - name: Re-install to link workspace bins
+        run: pnpm install --frozen-lockfile
 
       - name: Build Flatland example
-        working-directory: examples/flatland
-        run: |
-          node ../../packages/pressy/dist/cli/index.js build --outDir dist
-        env:
-          NODE_ENV: production
+        run: pnpm --filter flatland-example build
 
       - name: Deploy main site
         if: github.event_name == 'push'
@@ -56,7 +53,7 @@ jobs:
 
       - name: Deploy PR preview
         if: github.event_name == 'pull_request'
-        uses: rossjrw/pr-preview-deploy-action@v1
+        uses: rossjrw/pr-preview-action@v1
         with:
           source-dir: examples/flatland/dist
           umbrella-dir: pr-preview
@@ -69,7 +66,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Clean up PR preview
-        uses: rossjrw/pr-preview-deploy-action@v1
+        uses: rossjrw/pr-preview-action@v1
         with:
           source-dir: examples/flatland/dist
           umbrella-dir: pr-preview
