--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "pnpm --filter pressy dev",
-    "build": "pnpm --filter './packages/*' build",
+    "build": "pnpm -r --filter './packages/**' build",
     "test": "vitest",
     "lint": "eslint packages --ext .ts,.tsx",
     "typecheck": "tsc --noEmit"
