--- a/packages/pressy/package.json
+++ b/packages/pressy/package.json
@@ -33,18 +33,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@pressy/components": "workspace:*",
     "@mdx-js/mdx": "^3.0.0",
     "@preact/signals": "^1.2.0",
+    "@pressy/components": "workspace:*",
     "cac": "^6.7.14",
     "chokidar": "^3.5.3",
+    "esbuild": "^0.27.3",
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
     "preact": "^10.19.0",
     "preact-render-to-string": "^6.3.1",
-    "remark-gfm": "^4.0.0",
-    "rehype-slug": "^6.0.0",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^0.17.4",
     "workbox-precaching": "^7.0.0",
