--- a/packages/pressy/package.json
+++ b/packages/pressy/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^3.0.0",
     "@preact/signals": "^1.2.0",
-    "@pressy/components": "workspace:*",
+    "@pressy-pub/components": "workspace:*",
     "cac": "^6.7.14",
     "chokidar": "^3.5.3",
     "esbuild": "^0.27.3",
@@ -61,14 +61,14 @@
     "typescript": "^5.3.0"
   },
   "peerDependencies": {
-    "@pressy/components": "workspace:*",
-    "@pressy/typography": "workspace:*"
+    "@pressy-pub/components": "workspace:*",
+    "@pressy-pub/typography": "workspace:*"
   },
   "peerDependenciesMeta": {
-    "@pressy/components": {
+    "@pressy-pub/components": {
       "optional": true
     },
-    "@pressy/typography": {
+    "@pressy-pub/typography": {
       "optional": true
     }
   }
