--- a/examples/flatland/content/books/flatland/_book.yaml
+++ b/examples/flatland/content/books/flatland/_book.yaml
@@ -6,6 +6,6 @@ description: |
   of Flatland to offer pointed observations on the social hierarchy of Victorian culture.
 publishDate: "1884-01-01"
 language: en
-cover: cover.svg
+cover: cover.jpg
 paywall:
   enabled: false
